changed scraper to get image urls and added url to feed

--- a/web/templates/base.html
+++ b/web/templates/base.html
@@ -27,7 +27,7 @@ $if title: $title</title>
   <div class="navbar navbar-fixed-top">
     <div class="navbar-inner">
       <div class="container">
-        <a class="brand" href="/">Data Dashboard</a>
+        <a class="brand" href="/">MSL Feed</a>
       </div>
     </div>
   </div>
